--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -42,8 +42,7 @@ body{
 
 button{
     display: inline-block;
-    width: 100px;
-    height: 50px;
+    padding: 10px 10px;
     border-radius: 10px;
     border-style: none;
     font-size: 20px;
